--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8" />
 	<classpathentry kind="src" path="src" />
-	<classpathentry kind="lib" exported="true" path="lib/javatuples-1.2.jar" />
+	<classpathentry exported="true" kind="lib" path="lib/javatuples-1.2.jar" />
+	<classpathentry exported="true" kind="lib" path="lib/junit-4.11.jar" />
+	<classpathentry exported="true" kind="lib" path="lib/hamcrest-all-1.3.jar" />
 	<classpathentry kind="output" path="bin" />
 </classpath>
